[#17] - Remove text decoration for content edit url below the post title.

--- a/app/components/note/content/content.html
+++ b/app/components/note/content/content.html
@@ -2,7 +2,7 @@
     <div class="row yue">
         <div class="col-md-12 aside3-title">
             <h1 id="#identifier">{{ $ctrl.meta.title }}</h1>
-            <div class="aside3-date">编辑:<a ng-href="{{ $ctrl.editUrl }}" target="_blank">{{ $ctrl.pageContent.path }}</a>
+            <div class="aside3-date">编辑:<a ng-href="{{ $ctrl.editUrl }}" target="_blank" class="content-edit">{{ $ctrl.pageContent.path }}</a>
             </div>
         </div>
 
