--- a/style/base.css
+++ b/style/base.css
@@ -170,6 +170,10 @@ h4.panel-title {
     /*line-height: 1.8;*/
 }
 
+a.content-edit {
+    text-decoration: none;
+}
+
 #content h2, h3 {
     line-height: 2;
 }
