--- a/style/bootstrap.css
+++ b/style/bootstrap.css
@@ -1206,8 +1206,8 @@ hr {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: inherit;
-    font-weight: 500;
-    line-height: 1.1;
+    /*font-weight: 500;*/
+    /*line-height: 1.1;*/
     color: inherit
 }
 
