--- a/style/yue.css
+++ b/style/yue.css
@@ -31,6 +31,7 @@
 .yue h5,
 .yue h6 {
   font-family: "Georgia", "Xin Gothic", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei", "SimSun", sans-serif;
+  font-weight: bold;
   color: #222223;
 }
 
