--- a/style/base.css
+++ b/style/base.css
@@ -141,12 +141,12 @@ h4.panel-title {
 }
 
 .aside3-title {
-    /*  background-color: #f5f5f5;*/
-    /*background-image: url(/public/img/body_bg.jpg);*/
     padding-left: 30px;
     padding-right: 30px;
     text-align: center;
     color: #747778;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 1em;
 }
 
 .aside3-date {
@@ -170,8 +170,40 @@ h4.panel-title {
     /*line-height: 1.8;*/
 }
 
-a.content-edit {
+.entry-meta {
+    position: relative;
+    display: block;
+    font-size: 14px;
+    font-family: Optima, "Helvetica Neue", sans-serif;
+    padding-bottom: 1em;
+}
+
+.entry-meta .words::after {
+    content: " in ";
+}
+
+.entry-meta a.content-edit {
+    color: #999;
     text-decoration: none;
+}
+
+.tags {
+    float: left;
+    margin-bottom: 20px;
+}
+
+.tag {
+    margin-right: 6px;
+    font-size: 13px;
+}
+
+a.tag {
+    text-decoration: none;
+}
+
+.tag:before {
+    content: '#';
+    color: #999;
 }
 
 #content h2, h3 {
@@ -190,15 +222,17 @@ a.content-edit {
 
 .toc-title {
     display: block;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .toc-title.level2 {
     margin-left: 15px;
 }
+
 .toc-title.level3 {
     margin-left: 30px;
 }
+
 .toc-title.level4 {
     margin-left: 45px;
 }
@@ -228,7 +262,7 @@ blockquote p {
 #nav-btn {
     position: fixed;
     right: 15px;
-    top:70px;
+    top: 70px;
 }
 
 #content-btn {
@@ -247,7 +281,7 @@ blockquote p {
 .search-results {
     max-height: 180px;
     overflow-y: scroll;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
     margin-bottom: 7px;
 }
 
