--- a/style/base.css
+++ b/style/base.css
@@ -206,6 +206,31 @@ a.tag {
     color: #999;
 }
 
+.post-share {
+    margin: 0.8em 0;
+    padding-top: .7em;
+    padding-bottom: .6em;
+    font-size: 28px;
+    text-align: center;
+    background: #fcfcfc;
+}
+
+.post-share a {
+    text-decoration: none;
+}
+
+i.post-share-icon {
+    margin: 0 10px;
+    font-style: normal;
+    color: #BCC1C4;
+    transition: color .15s linear;
+    outline: none;
+}
+
+i.post-share-icon:hover {
+    color: #309E85;
+}
+
 #content h2, h3 {
     line-height: 2;
 }
