--- a/style/base.css
+++ b/style/base.css
@@ -187,7 +187,7 @@ h4.panel-title {
     text-decoration: none;
 }
 
-.tags {
+.aside3-tags {
     margin-bottom: 20px;
 }
 
@@ -205,7 +205,7 @@ a.tag {
     color: #999;
 }
 
-.post-share {
+.aside3-share {
     margin: 0.5em 0;
     padding-top: .7em;
     padding-bottom: .6em;
@@ -214,7 +214,7 @@ a.tag {
     background: #fcfcfc;
 }
 
-.post-share a {
+.aside3-share a {
     text-decoration: none;
 }
 
