--- a/style/base.css
+++ b/style/base.css
@@ -215,6 +215,7 @@ a.tag {
 }
 
 .aside3-share a {
+    cursor: pointer;
     text-decoration: none;
 }
 
@@ -228,6 +229,15 @@ i.post-share-icon {
 
 i.post-share-icon:hover {
     color: #309E85;
+}
+
+a.weixin-qr>qr {
+    display: none;
+}
+
+a.weixin-qr:hover>qr {
+    margin-top: 20px;
+    display: block;
 }
 
 #content h2, h3 {
