--- a/app/components/note/content/content.html
+++ b/app/components/note/content/content.html
@@ -39,7 +39,7 @@
                     <i class="post-share-icon fa {{ share.icon }}"></i>
                 </a>
 
-                <a ng-href="http://service.weibo.com/share/share.php?url={{ $ctrl.encodedShareLink }}&amp;title={{ $ctrl.meta.title }}" target="_blank">
+                <a ng-href="http://service.weibo.com/share/share.php?url={{ $ctrl.encodedShareLink }}&amp;title={{ $ctrl.encodedShareContent }}" target="_blank">
                     <i class="post-share-icon fa fa-weibo"></i>
                 </a>
                 <a class="weixin-qr">
