--- a/app/components/note/content/content.html
+++ b/app/components/note/content/content.html
@@ -33,7 +33,7 @@
             <div class="aside3-share">
                 <a ng-repeat="share in $ctrl.socialShare" socialshare
                    socialshare-provider="{{ share.name }}"
-                   socialshare-text="{{ $ctrl.meta.title }}"
+                   socialshare-text="{{ $ctrl.meta.title }} | 最美博客"
                    socialshare-url="{{ $ctrl.shareLink }}"
                    socialshare-hashtags="{{ $ctrl.hashTags }}">
                     <i class="post-share-icon fa {{ share.icon }}"></i>
