[#44] - add disqus comment for home page.

--- a/app/components/note/note.html
+++ b/app/components/note/note.html
@@ -24,6 +24,8 @@
             selected-category="$ctrl.selectedCategory"
             newest-paginator="$ctrl.index.paginator">
     </aside3>
+
+    <dir-disqus config="$ctrl.disqusConfig"></dir-disqus>
 </div>
 
 <button id="nav-btn" class="btn btn-primary" ng-click="$ctrl.toggleNav()">
