--- a/app/components/note/aside2/aside2.html
+++ b/app/components/note/aside2/aside2.html
@@ -1,5 +1,5 @@
-<div class="tab-pane" id="{{ $ctrl.selectedCategory }}">
-    <div class="list-group">
+<div class="navside2">
+    <div class="list-group" id="{{ $ctrl.selectedCategory }}">
         <div ng-repeat="post in $ctrl.posts">
             <a ng-href="#!/note/{{ $ctrl.selectedCategory }}{{ post.url }}"
                class="list-group-item-lay"
