--- a/style/base.css
+++ b/style/base.css
@@ -6,7 +6,7 @@
 }
 
 body, html {
-    margin: 0px;
+    margin: 0;
     height: 100%;
     overflow: hidden;
     background-color: #EAEDEF;
@@ -35,41 +35,23 @@ body, html {
 
 /* 左侧导航栏 */
 .aside1 {
-    /*background-color: #1f2c39;*/
     background-color: #fff;
-    /*background-image: url(/public/img/bg_grid.jpg);*/
     height: 100%;
     padding-top: 20px;
     padding-left: 0px;
     padding-right: 0px;
     text-align: center;
-    /*box-shadow: inset -15px 0 20px -15px #77AEF4;*/
 }
 
 .aside1 > .nav > li > a {
-    padding-left: 0px;
-    padding-right: 0px;
-    border-radius: 0px;
+    border-radius: 0;
     color: #000;
     font-size: 15px;
-    padding: 10px 10px;
-
+    padding: 10px;
 }
 
 .aside1 > .nav > li > a:hover {
-    /*color:#fff;*/
-    /*background-color: #14AA57;*/
-    text-decoration: underline;
-
-    /*background-color: #57CB80;*/
-
-}
-
-.aside1 > .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
-    /*color: #fff;*/
-    /*background-color: #fafaf6;*/
-    /*background-image: url(/public/img/body_bg.jpg);*/
-    /*background-color: #D1D4D7;*/
+    background-color: #EAEDEF;
 }
 
 ul.nav.nav-pills.nav-stacked {
@@ -161,13 +143,8 @@ h4.panel-title {
     color: #444443;
 }
 
-#pjax .row {
-    margin-top: 0px;
-}
-
-#content {
-    /*font-size: 18px;*/
-    /*line-height: 1.8;*/
+.offset-fixed {
+    margin-top: 60px;
 }
 
 .entry-meta {
@@ -231,11 +208,11 @@ i.post-share-icon:hover {
     color: #309E85;
 }
 
-a.weixin-qr>qr {
+a.weixin-qr > qr {
     display: none;
 }
 
-a.weixin-qr:hover>qr {
+a.weixin-qr:hover > qr {
     margin-top: 20px;
     display: block;
 }
