[#33] - Deleted useless bower file and refactored to import dependencies directly.

--- a/app/components/apps/apps.html
+++ b/app/components/apps/apps.html
@@ -3,14 +3,14 @@
 
         <section class="post-cover-image">
             <a class="thumbnail" ng-href="http://zuimeia.com/app/{{app.id}}/?platform=1" title="{{app.title}}—{{app.sub_title}}" target="_blank">
-                <img src="{{app.cover_image}}" width="640" height="360" alt="{{app.title}}" style="display: block;">
+                <img ng-src="{{ app.cover_image }}" width="640" height="360" alt="{{app.title}}" style="display: block;">
             </a>
         </section>
 
         <div class="post-header">
             <div class="app-icon">
                 <a ng-href="http://zuimeia.com/app/{{app.id}}/?platform=1" target="_blank" title="{{app.title}}—{{app.sub_title}}">
-                    <img alt="{{app.title}}" src="{{app.icon_image}}" style="display: inline;">
+                    <img alt="{{app.title}}" ng-src="{{ app.icon_image }}" style="display: inline;">
                     <span class="mask"></span>
                 </a>
             </div>
