--- a/style/base.css
+++ b/style/base.css
@@ -12,6 +12,73 @@ body, html {
     background-color: #EAEDEF;
 }
 
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 54px;
+    line-height: 54px;
+    z-index: 100;
+    padding: 0 30px;
+    background: #fff;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, .1);
+}
+
+.logo {
+    position: absolute;
+}
+
+.logo img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.top-bar {
+    float: left;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 66px;
+}
+
+.top-bar a {
+    margin-right: 10px;
+    font-weight: 500;
+    font-size: 15px;
+    letter-spacing: 1.1px;
+}
+
+.link {
+    color: #777;
+    cursor: pointer;
+}
+
+header .menu {
+    float: right;
+    display: inline-block;
+    vertical-align: middle;
+    color: #78909c;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.default-search {
+    color: #727272;
+    margin-right: -30px;
+    border: 1px solid #cfd8dc;
+    width: 180px;
+    height: 28px;
+    line-height: normal;
+    padding: 6px 12px;
+    border-radius: 20px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    vertical-align: middle;
+    outline: 0;
+}
+
 .row {
     height: 100%;
 }
