--- a/app/components/note/aside1/aside1.html
+++ b/app/components/note/aside1/aside1.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills nav-stacked">
+<ul class="nav">
     <li ng-repeat="category in $ctrl.categories" ng-class="category.name === $ctrl.selectedCategory ? 'active': ''">
         <a ng-href="#!/note/{{ category.name }}" data-toggle="tab">{{ category.name }}</a>
     </li>
