--- a/app/components/note/aside3/aside3.html
+++ b/app/components/note/aside3/aside3.html
@@ -1,4 +1,4 @@
-<div style="text-align: center;">
+<div class="center">
     <h3>
         <span style="color: #000080; ">未</span>
         <span style="color: #FFA500; ">知</span>
@@ -13,13 +13,14 @@
         <span style="color: #638c0b; ">心</span>
     </h3>
 </div>
+
 <div class="col-md-12">
     <div class="panel panel-primary">
         <div class="panel-heading">{{ $ctrl.newest }}</div>
         <post-link posts="$ctrl.newestPosts" selected-category="$ctrl.selectedCategory"></post-link>
     </div>
     <div class="panel panel-primary" ng-repeat="tag in $ctrl.tagsWithPosts">
-        <div class="panel-heading"><a ng-href="#tags/{{ tag.name }}" class="selected-tag">{{ tag.name }}</a></div>
+        <div class="panel-heading"><a ng-href="#tags/{{ tag.name }}">{{ tag.name }}</a></div>
         <post-link posts="tag.posts" selected-category="$ctrl.selectedCategory"></post-link>
     </div>
 </div>
