--- a/app/components/note/nest/nest.html
+++ b/app/components/note/nest/nest.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div class="col-md-8 col-lg-8 col-sm-12 col-xs-12 nest">
+<div class="col-md-8 col-lg-8 col-sm-12 col-xs-12 nest-page">
     <iframe id="preview" ng-src="{{ $ctrl.pageUrl }}"
             frameborder="0" width="100%" height="100%"></iframe>
 </div>
