--- a/app/components/note/post/post.html
+++ b/app/components/note/post/post.html
@@ -1,7 +1,7 @@
 <div class="yue">
     <div class="col-md-12 aside3-title">
         <h1 id="#identifier">{{ $ctrl.meta.title }}</h1>
-        <div class="entry-meta">
+        <div class="aside3-meta">
             <span class="words">{{ $ctrl.content.length }} words</span>
             <a class="content-edit" rel="nofollow" ng-href="{{ $ctrl.editUrl }}" target="_blank">{{ $ctrl.pageContent.path }}</a>
         </div>
@@ -13,7 +13,7 @@
         <books ng-if="$ctrl.meta.layout === 'book'" books="$ctrl.meta.books"></books>
 
         <!-- 目录 -->
-        <div id="content-table" class="panel panel-success no-mobile" ng-show="$ctrl.showToc">
+        <div id="toc" class="panel panel-success no-mobile" ng-show="$ctrl.showToc">
             <div class="panel-body" id="nav">
                 <a class="toc-title" ng-repeat="headline in toc.headlines"
                    ng-class="{level2: headline.level == 2, level3: headline.level == 3, level4: headline.level == 4}"
@@ -33,13 +33,13 @@
                socialshare-text="{{ $ctrl.meta.title }} | 最美博客"
                socialshare-url="{{ $ctrl.shareLink }}"
                socialshare-hashtags="{{ $ctrl.hashTags }}">
-                <i class="post-share-icon fa {{ share.icon }}"></i>
+                <i class="fa {{ share.icon }}"></i>
             </a>
             <a ng-href="http://service.weibo.com/share/share.php?url={{ $ctrl.encodedShareLink }}&amp;title={{ $ctrl.encodedShareContent }}" target="_blank">
-                <i class="post-share-icon fa fa-weibo"></i>
+                <i class="fa fa-weibo"></i>
             </a>
             <a class="weixin-qr">
-                <i class="post-share-icon fa fa-weixin"></i>
+                <i class="fa fa-weixin"></i>
                 <qr text="$ctrl.shareLink"></qr>
             </a>
         </div>
