--- a/app/components/note/post/post.html
+++ b/app/components/note/post/post.html
@@ -3,7 +3,7 @@
         <h1 id="#identifier">{{ $ctrl.meta.title }}</h1>
         <div class="aside3-meta">
             <span class="words">{{ $ctrl.content.length }} words</span>
-            <a class="content-edit" rel="nofollow" ng-href="{{ $ctrl.editUrl }}" target="_blank">{{ $ctrl.pageContent.path }}</a>
+            <a class="content-edit" rel="nofollow" ng-href="{{ $ctrl.editUrl }}" target="_blank">{{ $ctrl.filename }}</a>
         </div>
     </div>
 
