[#9] - Revert last commit and add gulp (but not work).

--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -15,22 +15,22 @@
         <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">GITHUB</a>
     </div>
     <div class="tool-bar">
-        <input autocomplete="off" class="default-search no-mobile" ng-model="$ctrl.searchText" name="keyword"
+        <input autocomplete="off" class="default-search no-mobile" ng-model="main.searchText" name="keyword"
                placeholder="Search..." type="text">
-        <span class="cancel-search no-mobile" ng-click="$ctrl.clearSearch()"><i class="fa fa-times"></i></span>
-        <span class="random-post" ng-click="$ctrl.randomPost()" analytics-on analytics-event="RandomPost" analytics-category="Commands">随机文章</span>
+        <span class="cancel-search no-mobile" ng-click="main.clearSearch()"><i class="fa fa-times"></i></span>
+        <span class="random-post" ng-click="main.randomPost()" analytics-on analytics-event="RandomPost" analytics-category="Commands">随机文章</span>
     </div>
 </header>
 
-<div class="row yue search-results" ng-if="$ctrl.searchText">
+<div class="row yue search-results" ng-if="main.searchText">
     <table>
         <tr>
             <th>Category</th>
             <th>Post</th>
             <th>Tags</th>
-            <th>搜索「<span id="search-text" ng-click="$ctrl.clearSearch()">{{$ctrl.searchText}}</span>」共计{{($ctrl.posts | filter:$ctrl.searchText).length}}个结果:</th>
+            <th>搜索「<span id="search-text" ng-click="main.clearSearch()">{{main.searchText}}</span>」共计{{(main.posts | filter:main.searchText).length}}个结果:</th>
         </tr>
-        <tr ng-repeat="post in $ctrl.posts | filter:$ctrl.searchText">
+        <tr ng-repeat="post in main.posts | filter:main.searchText">
             <td>{{post.category}}</td>
             <td>{{post.url}}</td>
             <td>{{post.tags}}</td>
