--- a/app/features/note/post/post.less
+++ b/app/features/note/post/post.less
@@ -1,4 +1,3 @@
-
 .aside3-title {
   padding-left: 30px;
   padding-right: 30px;
@@ -66,6 +65,8 @@
 
       &:hover {
         color: #309E85;
+        transform: rotate(360deg);
+        transition: all 0.8s ease-in-out;
       }
     }
 
