[#53] - Add music box component, only need add music id in meta info of post.

--- a/app/features/note/post/post.less
+++ b/app/features/note/post/post.less
@@ -7,11 +7,6 @@
   margin-bottom: 1em;
 }
 
-.aside3-date {
-  margin-bottom: 10px;
-  border-bottom: 1px solid #eee;
-}
-
 .aside3-meta {
   position: relative;
   display: block;
@@ -27,6 +22,12 @@
     color: #999;
     text-decoration: none;
   }
+}
+
+.aside3-music iframe {
+  display: inherit;
+  text-align: center;
+  margin-bottom: 0;
 }
 
 .aside3-tags {
