[#19] - Implement music play functionality using ngAudio.

--- a/app/commons/header/header.less
+++ b/app/commons/header/header.less
@@ -29,14 +29,12 @@ header {
       font-weight: 500;
       font-size: 15px;
       letter-spacing: 1.1px;
+      text-transform: uppercase;
+      color: #777;
+      cursor: pointer;
 
-      &.link {
-        color: #777;
-        cursor: pointer;
-
-        &.active {
-          color: #f8c027;
-        }
+      &.active {
+        color: #f8c027;
       }
     }
   }
