--- a/app/features/note/post/post.less
+++ b/app/features/note/post/post.less
@@ -30,6 +30,13 @@
   margin-bottom: 0;
 }
 
+iframe.aside3-slide {
+  min-height: 600px;
+  display: inherit;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 .aside3-tags {
   margin-bottom: 20px;
 
