--- a/app/commons/header/header.less
+++ b/app/commons/header/header.less
@@ -21,7 +21,7 @@ header {
       text-decoration: none;
       cursor: pointer;
 
-      &.active {
+      &.active, &:active {
         color: #f8c027;
       }
     }
