[#5] - Add English toggle for translator articles.

--- a/src/angular/decorators/toc.less
+++ b/src/angular/decorators/toc.less
@@ -25,3 +25,14 @@
     }
   }
 }
+
+.english-hidden {
+  display: none;
+}
+
+.english-ref.english-hidden {
+  display: block;
+  p:nth-child(3) {
+    display: none !important;
+  }
+}
