[#5] - Refactored English toggle btn to toggle buttons together and added enable flag for these buttons.

--- a/src/angular/features/note/post/post.less
+++ b/src/angular/features/note/post/post.less
@@ -7,6 +7,19 @@
   margin-bottom: 1em;
 }
 
+.aside3-content {
+  .english-hidden {
+    display: none;
+  }
+
+  .english-ref.english-hidden {
+    display: block;
+    p:nth-child(3) {
+      display: none !important;
+    }
+  }
+}
+
 .aside3-matter {
   position: relative;
   display: block;
