--- a/src/angular/features/note/toggleButton/toggleButton.less
+++ b/src/angular/features/note/toggleButton/toggleButton.less
@@ -13,6 +13,13 @@
     top: 113px;
   }
 
+  #lang-btn {
+    position: fixed;
+    width: 42px;
+    right: 15px;
+    top: 156px;
+  }
+
   .btn {
     &:focus, &:hover {
       color: #fff;
