[#69] - Implemented navigation for different category with blog list.

--- a/src/react/components/Blog/SideBar.less
+++ b/src/react/components/Blog/SideBar.less
@@ -16,6 +16,7 @@
     text-align: center;
 
     & > .nav > li > a {
+      cursor: pointer;
       border-radius: 0;
       color: #000;
       font-size: 15px;
