[#69] - Simplified styling for page content.

--- a/src/react/components/Blog/SideBar.less
+++ b/src/react/components/Blog/SideBar.less
@@ -1,6 +1,7 @@
 .nav-aside {
   position: absolute;
   margin-top: 0;
+  padding-top: 60px;
   margin-left: -15px;
   margin-right: 7px;
   padding-right: 0;
@@ -34,9 +35,9 @@
 
     .aside1-bottom {
       width: 100%;
-      //position: absolute;
-      //bottom: 0;
-      //left: 0;
+      position: absolute;
+      bottom: 0;
+      left: 0;
       border-top: 3px solid #EAEDEF;
       padding-top: 7px;
 
