[#46] - Added toggle content functionality for mobile and fixed styling for sidebar.

--- a/src/react/components/Blog/BlogContent.less
+++ b/src/react/components/Blog/BlogContent.less
@@ -1,7 +1,7 @@
 .aside3 {
   position: absolute;
   padding-top: 60px;
-  right: 8px;
+  right: 0;
   height: 100%;
   overflow-y: auto;
   font-weight: 300;
