--- a/src/react/components/Blog/BlogList.less
+++ b/src/react/components/Blog/BlogList.less
@@ -1,10 +1,9 @@
 .aside2 {
   overflow-y: auto;
   height: 100%;
-  width: 72%;
-  margin-left: 10px;
+  width: 73.5%;
   padding-top: 20px;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 10px;
+  padding-right: 10px;
   background-color: #fff;
 }
