--- a/src/react/components/Blog/SideBar.less
+++ b/src/react/components/Blog/SideBar.less
@@ -2,8 +2,7 @@
   position: absolute;
   margin-top: 0;
   padding-top: 60px;
-  margin-left: -15px;
-  margin-right: 7px;
+  padding-left: 0;
   padding-right: 0;
   font-weight: 300;
   height: 100%;
