[#46] - Refactored component and page construct, simplify some styling file.

--- a/src/react/components/Blog/SideBar.less
+++ b/src/react/components/Blog/SideBar.less
@@ -50,4 +50,14 @@
       }
     }
   }
+
+  .aside2 {
+    overflow-y: auto;
+    height: 100%;
+    width: 73.5%;
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #fff;
+  }
 }
